--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <ul>
         <li><a href="https://yanhezhongxue180109.github.io/">主页</a></li>
         <li><a href="#" class="active">新冠病毒</a></li>
+        <li class="right"><a href="https://yanhezhongxue180109.github.io/about.html">关于</a>
         <li class="right"><a href="https://github.com/Yanhezhongxue180109/2019-nCov-explore/">GitHub项目</a></li>
     </ul>
     <div class="content">
